fix search z-index issue

--- a/wp-content/themes/goorin/css/app.css
+++ b/wp-content/themes/goorin/css/app.css
@@ -2628,7 +2628,6 @@ body.bodyhidden, body.noscroll, .site-header .submenu, .cart-dropdown .cart-list
 
 /* line 256, sass/layout/_header.scss */
 .site-search {
-  z-index: 9999;
   padding: 20px 0 0;
 }
 @media only screen and (min-width: 1140px) {
@@ -2644,7 +2643,7 @@ body.bodyhidden, body.noscroll, .site-header .submenu, .cart-dropdown .cart-list
   }
 }
 @media only screen and (min-width: 1140px) {
-  /* line 270, sass/layout/_header.scss */
+  /* line 269, sass/layout/_header.scss */
   .site-search .search-close {
     height: 40px;
     width: 40px;
@@ -2654,7 +2653,7 @@ body.bodyhidden, body.noscroll, .site-header .submenu, .cart-dropdown .cart-list
     display: inline-block;
   }
 }
-/* line 278, sass/layout/_header.scss */
+/* line 277, sass/layout/_header.scss */
 .site-search .search-close span:before, .site-search .search-close span:after {
   top: 20px;
   content: '';
@@ -2666,7 +2665,7 @@ body.bodyhidden, body.noscroll, .site-header .submenu, .cart-dropdown .cart-list
   background: #4d4d4d;
   background: #4d4d4d;
 }
-/* line 287, sass/layout/_header.scss */
+/* line 286, sass/layout/_header.scss */
 .site-search .search-close span:before {
   -webkit-transform: rotate(135deg);
   -moz-transform: rotate(135deg);
@@ -2674,7 +2673,7 @@ body.bodyhidden, body.noscroll, .site-header .submenu, .cart-dropdown .cart-list
   -o-transform: rotate(135deg);
   transform: rotate(135deg);
 }
-/* line 290, sass/layout/_header.scss */
+/* line 289, sass/layout/_header.scss */
 .site-search .search-close span:after {
   -webkit-transform: rotate(-135deg);
   -moz-transform: rotate(-135deg);
@@ -2682,19 +2681,19 @@ body.bodyhidden, body.noscroll, .site-header .submenu, .cart-dropdown .cart-list
   -o-transform: rotate(-135deg);
   transform: rotate(-135deg);
 }
-/* line 294, sass/layout/_header.scss */
+/* line 293, sass/layout/_header.scss */
 .site-search .site-search-form {
   border-bottom: 1px solid #4d4d4d;
   padding: 0 0 10px;
 }
 @media only screen and (min-width: 1140px) {
-  /* line 294, sass/layout/_header.scss */
+  /* line 293, sass/layout/_header.scss */
   .site-search .site-search-form {
     border: none;
     padding: 0 0 0 75px;
   }
 }
-/* line 303, sass/layout/_header.scss */
+/* line 302, sass/layout/_header.scss */
 .site-search .site-search-form input[type="text"] {
   color: #4d4d4d;
   border: none;
@@ -2722,20 +2721,20 @@ body.bodyhidden, body.noscroll, .site-header .submenu, .cart-dropdown .cart-list
   color: #4d4d4d;
 }
 @media only screen and (min-width: 768px) {
-  /* line 303, sass/layout/_header.scss */
+  /* line 302, sass/layout/_header.scss */
   .site-search .site-search-form input[type="text"] {
     font-size: 43px;
     line-height: normal;
   }
 }
 @media only screen and (min-width: 1140px) {
-  /* line 303, sass/layout/_header.scss */
+  /* line 302, sass/layout/_header.scss */
   .site-search .site-search-form input[type="text"] {
     font-size: 62px;
     line-height: normal;
   }
 }
-/* line 324, sass/layout/_header.scss */
+/* line 323, sass/layout/_header.scss */
 .site-search .site-search-form input[type="submit"] {
   border: none;
   height: 20px;
@@ -2750,7 +2749,7 @@ body.bodyhidden, body.noscroll, .site-header .submenu, .cart-dropdown .cart-list
   background-size: 11px auto;
 }
 @media only screen and (min-width: 768px) {
-  /* line 324, sass/layout/_header.scss */
+  /* line 323, sass/layout/_header.scss */
   .site-search .site-search-form input[type="submit"] {
     background-size: 14px auto;
     height: 25px;
@@ -2759,7 +2758,7 @@ body.bodyhidden, body.noscroll, .site-header .submenu, .cart-dropdown .cart-list
   }
 }
 @media only screen and (min-width: 1140px) {
-  /* line 324, sass/layout/_header.scss */
+  /* line 323, sass/layout/_header.scss */
   .site-search .site-search-form input[type="submit"] {
     background-size: 18px auto;
     height: 32px;
@@ -2767,7 +2766,7 @@ body.bodyhidden, body.noscroll, .site-header .submenu, .cart-dropdown .cart-list
     margin: 25px 0 0;
   }
 }
-/* line 347, sass/layout/_header.scss */
+/* line 346, sass/layout/_header.scss */
 .site-search:hover input[type="text"] {
   color: #ffffff;
 }
@@ -2787,18 +2786,18 @@ body.bodyhidden, body.noscroll, .site-header .submenu, .cart-dropdown .cart-list
 .site-search:hover input[type="text"]:-ms-input-placeholder {
   color: #ffffff;
 }
-/* line 353, sass/layout/_header.scss */
+/* line 352, sass/layout/_header.scss */
 .site-search:hover input[type="submit"] {
   background-position: 0 -21px;
 }
 @media only screen and (min-width: 768px) {
-  /* line 353, sass/layout/_header.scss */
+  /* line 352, sass/layout/_header.scss */
   .site-search:hover input[type="submit"] {
     background-position: 0 -26px;
   }
 }
 @media only screen and (min-width: 1140px) {
-  /* line 353, sass/layout/_header.scss */
+  /* line 352, sass/layout/_header.scss */
   .site-search:hover input[type="submit"] {
     background-position: 0 -34px;
   }
